--- a/magnum/drivers/k8s_centos7_v1/fragments/write-heat-params-master.yaml
+++ b/magnum/drivers/k8s_centos7_v1/fragments/write-heat-params-master.yaml
@@ -45,6 +45,7 @@ write_files:
       FLANNEL_TAG="$FLANNEL_TAG"
       KUBE_VERSION="$KUBE_VERSION"
       KUBE_DASHBOARD_VERSION="$KUBE_DASHBOARD_VERSION"
+      TRUSTEE_DOMAIN_ID="$TRUSTEE_DOMAIN_ID"
       TRUSTEE_USER_ID="$TRUSTEE_USER_ID"
       TRUSTEE_PASSWORD="$TRUSTEE_PASSWORD"
       TRUST_ID="$TRUST_ID"
@@ -78,3 +79,4 @@ write_files:
       ENCRYPTION_KEY="$ENCRYPTION_KEY"
       WAIT_CURL="$WAIT_CURL"
       IS_MASTER="true"
+      EXTERNAL_NETWORK="$EXTERNAL_NETWORK"
