--- a/magnum/drivers/k8s_centos7_v1/templates/kubecluster.yaml
+++ b/magnum/drivers/k8s_centos7_v1/templates/kubecluster.yaml
@@ -658,6 +658,7 @@ resources:
           etcd_tag: {get_param: etcd_tag}
           flannel_tag: {get_param: flannel_tag}
           kube_dashboard_version: {get_param: kube_dashboard_version}
+          trustee_domain_id: {get_param: trustee_domain_id}
           trustee_user_id: {get_param: trustee_user_id}
           trustee_password: {get_param: trustee_password}
           trust_id: {get_param: trust_id}
@@ -714,6 +715,7 @@ resources:
             - get_file: ../fragments/kube-apiserver-to-kubelet-role.sh
             - get_file: ../fragments/configure-cni.sh
             - get_file: ../fragments/configure-coredns.sh
+            - get_file: ../fragments/configure-cloud-controller.sh
 
   kube_cluster_deploy:
     type: OS::Heat::SoftwareDeployment
@@ -780,10 +782,10 @@ resources:
           kube_tag: {get_param: kube_tag}
           kube_version: {get_param: kube_version}
           flannel_tag: {get_param: flannel_tag}
+          trustee_domain_id: {get_param: trustee_domain_id}
           trustee_user_id: {get_param: trustee_user_id}
           trustee_username: {get_param: trustee_username}
           trustee_password: {get_param: trustee_password}
-          trustee_domain_id: {get_param: trustee_domain_id}
           trust_id: {get_param: trust_id}
           cloud_provider_enabled: {get_param: cloud_provider_enabled}
           insecure_registry_url: {get_param: insecure_registry_url}
