--- a/magnum/drivers/k8s_centos7_v1/templates/kubemaster.yaml
+++ b/magnum/drivers/k8s_centos7_v1/templates/kubemaster.yaml
@@ -236,6 +236,10 @@ parameters:
     type: string
     description: version of kubernetes dashboard used for kubernetes cluster
 
+  trustee_domain_id:
+    type: string
+    description: domain id of the trustee
+
   trustee_user_id:
     type: string
     description: user id of the trustee
@@ -404,7 +408,7 @@ resources:
       master_public_ip: {get_attr: [kube_master_floating, floating_ip_address]}
       master_private_ip: {get_attr: [kube_master_eth0, fixed_ips, 0, ip_address]}
 
-  write_heat_params:
+  write_heat_params_master:
     type: OS::Heat::SoftwareConfig
     properties:
       group: ungrouped
@@ -455,6 +459,7 @@ resources:
             "$FLANNEL_TAG": {get_param: flannel_tag}
             "$KUBE_VERSION": {get_param: kube_version}
             "$KUBE_DASHBOARD_VERSION": {get_param: kube_dashboard_version}
+            "$TRUSTEE_DOMAIN_ID": {get_param: trustee_domain_id}
             "$TRUSTEE_USER_ID": {get_param: trustee_user_id}
             "$TRUSTEE_PASSWORD": {get_param: trustee_password}
             "$TRUST_ID": {get_param: trust_id}
@@ -484,6 +489,7 @@ resources:
             "$GRAFANA_TAG": {get_param: grafana_tag}
             "$ENCRYPTION_KEY": {get_param: encryption_key}
             "$WAIT_CURL": {get_param: wait_curl}
+            "$EXTERNAL_NETWORK": {get_param: external_network}
 
   install_openstack_ca:
     type: OS::Heat::SoftwareConfig
@@ -530,6 +536,12 @@ resources:
     properties:
       group: ungrouped
       config: {get_file: ../fragments/configure-encryption.sh}
+
+  write_kube_os_config:
+    type: OS::Heat::SoftwareConfig
+    properties:
+      group: ungrouped
+      config: {get_file: ../fragments/write-kube-os-config.sh}
 
   configure_kubernetes_master:
     type: OS::Heat::SoftwareConfig
@@ -583,7 +595,7 @@ resources:
     type: OS::Heat::MultipartMime
     properties:
       parts:
-        - config: {get_resource: write_heat_params}
+        - config: {get_resource: write_heat_params_master}
         - config: {get_resource: install_openstack_ca}
         - config: {get_resource: disable_selinux}
         - config: {get_resource: make_cert_for_master}
@@ -591,6 +603,7 @@ resources:
         - config: {get_resource: make_kubeconfig_for_master}
         - config: {get_resource: configure_etcd}
         - config: {get_resource: configure_encryption}
+        - config: {get_resource: write_kube_os_config}
         - config: {get_resource: configure_kubernetes_master}
         - config: {get_resource: make_cert_for_minion}
         - config: {get_resource: configure_docker}
