--- a/setup.cfg
+++ b/setup.cfg
@@ -58,8 +58,8 @@ oslo.policy.policies =
     magnum = magnum.common.policies:list_rules
 
 magnum.drivers =
-    k8s_centos7_v1 = magnum.drivers.k8s_centos7_v1.driver:Driver
-    k8s_centos7_v2 = magnum.drivers.k8s_centos7_v2.driver:Driver
+    k8s_bke_1_13_1 = magnum.drivers.k8s_bke_1_13_1.driver:Driver
+    k8s_bke_1_13_2 = magnum.drivers.k8s_bke_1_13_2.driver:Driver
 
 magnum.database.migration_backend =
     sqlalchemy = magnum.db.sqlalchemy.migration
